application/deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lofi
  name: lofi
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: lofi
  type: ClusterIP
